/*
 *     Copyright 2020 The Dragonfly Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// common data for request and response

syntax = "proto3";

package base;

option go_package = "github.com/dragonflyoss/Dragonfly2/pkg/grpc/base";

enum Code{
  INVALID_UNSPECIFIED = 0;
  // no problem 200-299
  SUCCESS = 200;
  // client processing error 400-499
  NETWORK_ERROR = 400;
  // server processing error 500-599
  ERROR = 500;
  // illegal parameter 600-699
  PEER_HOST_UUID_CONFLICT = 600;
}

enum PieceStyle{
  PLAIN_UNSPECIFIED = 0;
}

message ResponseState{
  bool success = 1;
  Code code = 2;
  string msg = 3;
}

